Create "example" batch scripts in git repo, ignore real ones

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,13 @@
 *.h5
 *.pdf
 results
+*.npy
+*.npz
 # Ignore everything in batch log and tmp except for .gitkeep
 batch/logs/*
 batch/tmp_output/*
 !.gitkeep
+# Keep sample batch files and ignore the "real" ones
+batch/*.py
+batch/*.sl
+!batch/*.example
